--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>infinity | NFT pjt. from Japan</title>
+    <title>We are ∞ infinity | NFT pjt. from Japan</title>
     <meta charset="UTF-8">
   </head>
   <body>
     hello infinity.
   </body>
-</html>>
+</html>
