add three pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>We are ∞ infinity | NFT pjt. from Japan</title>
+    <title>KIRINJI | NFT pjt. from JAPAN</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" media="screen and (max-width:800px)" href="stylesheets/sp-style.css">
   </head>
   <body>
-    hello infinity.
+    <header></header>
+    <div class="left-top-templete">
+      <img src="images/left-top.png" alt="左上固定位置の飾り">
+    </div>
+    <div class="left-bottom-templete">
+      <img src="images/left-bottom.png" alt="左下固定位置の飾り">
+    </div>
+    <div class="right-top-templete">
+      <img src="images/right-top.png" alt="右上固定位置の飾り">
+    </div>
+    <div class="right-bottom-templete">
+      <img src="images/right-bottom.png" alt="右下固定位置の飾り">
+    </div>
+    <div class="content">
+      <h1>We are KIRINJI</h1>
+
+      <div class="content-top-img">
+        <img src="images/content-top.png" alt="Artistの作品を出品支援する">
+      </div>
+
+      <div class="content-top-text">
+        <p>KIRINJI は、麒麟児たる若手アーティストを応援したい！共に成長したい！<br>という想いから生まれた、NFTを作成・出品するチームです。</p>
+        <p>暗号資産を知らなくても、作品を海外の取引所に出品することができます。</p>
+      </div>
+
+      <div class="try-nft">
+        <div class="try-nft-text">
+          <p>NFT Art で<br>世界に挑戦しよう</p>
+        </div>
+        <div class="try-nft-img">
+          <img src="images/try-nft.jpg" alt="NFTに挑戦しよう。羽ばたく鳥。">
+        </div>
+      </div>
+
+      <div class="nft-possibilities">
+        <div class="nft-possibilities-title">
+          <p>NFTという、アートの新しい可能性</p>
+        </div>
+        <div class="nft-possibilities-text-box">
+          <div class="nft-possibilities-text">
+            <p><strong>NFT</strong>は「<strong>Non-Fungible Token</strong>（非代替性トークン）」の頭文字です。<br>非代替性とは、その名の通り「替えが効かない、唯一無二の」という意味になります。</p>
+            <p>デジタルデータに、唯一無二性を与えたものがNFTです。<br>今、NFTは世界中で取引されています。</p>
+            <p><strong>私たちは、NFTと、その取引所を利用することで、日本の学生アーティストが、世界中に作品を届け、<br>ファンを作り、応援され、全く新しい収益源を作ることができると考えていました。</strong></p>
+          </div>
+          <div class="nft-possibilities-img">
+            <div class="nft-possibilities-img-left">
+              <img src="images/nft-possibilities.png" alt="OpenSeaのコレクションページ">
+            </div>
+            <div class="nft-possibilities-img-right">
+              <p>NFTはデジタルデータですので、<br>Web上の取引所で販売されます。</p>
+              <p>特にOpenSeaという海外の取引所にて、<br>盛んに取引されています。</p>
+              <p>2021年のNFT取引量は、2020年と比べて<br>42,988%もの大幅な増加（3億4,000万円→<br>1兆4,000億円）となっております。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <footer></footer>
   </body>
 </html>
