add four-six pages

--- a/index.html
+++ b/index.html
@@ -64,6 +64,30 @@
         </div>
       </div>
 
+      <div class="deliver-talent">
+        <div class="deliver-talent-text">
+          <p>若い才能が、世界中にファンを作る。<br>そんな世界を実現したい</p>
+        </div>
+        <div class="deliver-talent-img">
+          <img src="images/deliver-talent.png" alt="世界地図と各地で買われるNFT。">
+        </div>
+      </div>
+
+      <div class="scheme">
+        <div class="scheme-title">
+          <p>スキーム</p>
+        </div>
+        <div class="scheme-text-box">
+          <div class="scheme-text">
+            <p>①運営チーム KIRINJI　　 ：NFTのmint及びOpenseaへの出品、各種プロモーション</p>
+            <p>②若手アーティストの方　：Artの制作・提供 </p>
+          </div>
+          <div class="scheme-img">
+            <img src="images/scheme.png" alt="世界地図と各地で買われるNFT。">
+          </div>
+        </div>
+      </div>
+
     </div>
     <footer></footer>
   </body>
