--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" media="screen and (max-width:800px)" href="stylesheets/sp-style.css">
+    <meta name="description" content="KIRINJI は、麒麟児たる若手アーティストを応援したい！共に成長したい！という想いから生まれた、NFTを作成・出品するチームです。暗号資産を知らなくても、作品を海外の取引所に出品することができます。">
   </head>
   <body>
     <header></header>
@@ -83,8 +84,63 @@
             <p>②若手アーティストの方　：Artの制作・提供 </p>
           </div>
           <div class="scheme-img">
-            <img src="images/scheme.png" alt="世界地図と各地で買われるNFT。">
+            <img src="images/scheme.png" alt="スキームを説明するフロー図">
           </div>
+        </div>
+      </div>
+
+      <div class="merit">
+        <div class="merit-title">
+          <p>KIRINJIと共に活動するメリット</p>
+        </div>
+        <div class="merit-top-text">
+          <p class="blue-heading">KIRINJI 経由の出品フロー</p>
+          <p>ヒアリングシートに回答し、データ提供するだけ<br>出品に必要な手数料も KIRINJI が負担</p>
+        </div>
+        <div class="merit-img">
+          <img src="images/merit.png" alt="出品フロー図">
+        </div>
+        <div class="merit-bottom-text">
+          <p class="red-heading">通常の出品フロー</p>
+          <p>通常の出品フローNFT出品するまでに、暗号資産やWalletについての知識が必要<br>出品するのに手数料（ガス代と呼ばれる）が必要なことも</p>
+        </div>
+      </div>
+
+      <div class="member">
+        <div class="member-title">
+          <p>Team KIRINJI member</p>
+        </div>
+        <div class="member-profiles">
+          <div class="profile">
+            <img src="images/uekusa.png" alt="Uekusa Daichiの顔写真">
+            <p class="name">Uekusa Daichi</p>
+            <p class="position">Artist Management</p>
+            <p class="description">デジタルハリウッド大学を<br>卒業後、アクセンチュアを経て<br>Webセキュリティ企業副社長。<br>大学・Artistとの向き合い担当</p>
+          </div>
+          <div class="profile">
+            <img src="images/hayase.png" alt="Hayase Tomotakaの顔写真">
+            <p class="name">Hayase Tomotaka</p>
+            <p class="position">Planner</p>
+            <p class="description">複数のスタートアップで<br>M＆AやIPO準備を担当。<br>財務・法務・スキーム構築担当</p>
+          </div>
+          <div class="profile">
+            <img src="images/yamaguchi.png" alt="Yamaguchi Tadashiの顔写真">
+            <p class="name">Yamaguchi Tadashi</p>
+            <p class="position">engineer</p>
+            <p class="description">スタートアップの開発系役員。<br>ブロックチェーンに精通。<br>開発全般を担当</p>
+          </div>
+          <div class="profile">
+            <img src="images/inashima.png" alt="Inashima Nanamiの顔写真">
+            <p class="name">Inashima Nanami</p>
+            <p class="position">Account Planner</p>
+            <p class="description">アクセンチュアにて、<br>テクノロジーコンサルタント、ART×NFT Meta Fair #01運営。<br>KIRINJIではArtist開拓担当</p>
+          </div>
+        </div>
+        <div class="member-text">
+          <p>セキュリティスタートアップの経営者、財務や法律に精通したメンバー、<br>スタートアップの開発役員、アクセンチュアのテクノロジーコンサルタント等、<br>バランス感＆ビジネス経験豊かなメンバーがプロジェクトに参加しています。</p>
+        </div>
+
+        <div class="soon">
         </div>
       </div>
 
