--- a/index.html
+++ b/index.html
@@ -3,34 +3,40 @@
   <head>
     <title>KIRINJI | NFT pjt. from JAPAN</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/style.css">
-    <link rel="stylesheet" media="screen and (max-width:800px)" href="stylesheets/sp-style.css">
+    <link rel="stylesheet" href="stylesheets/sp-style.css">
     <meta name="description" content="KIRINJI は、麒麟児たる若手アーティストを応援したい！共に成長したい！という想いから生まれた、NFTを作成・出品するチームです。暗号資産を知らなくても、作品を海外の取引所に出品することができます。">
   </head>
   <body>
+    <div class="wrap">
     <header></header>
-    <div class="left-top-templete">
-      <img src="images/left-top.png" alt="左上固定位置の飾り">
-    </div>
-    <div class="left-bottom-templete">
-      <img src="images/left-bottom.png" alt="左下固定位置の飾り">
-    </div>
-    <div class="right-top-templete">
-      <img src="images/right-top.png" alt="右上固定位置の飾り">
-    </div>
-    <div class="right-bottom-templete">
-      <img src="images/right-bottom.png" alt="右下固定位置の飾り">
-    </div>
     <div class="content">
-      <h1>We are KIRINJI</h1>
+      <div class="title">
+        <h1>We are KIRINJI</h1>
+        <div class="left-top-templete">
+          <img src="images/left-top.png" alt="左上固定位置の飾り">
+        </div>
+        <div class="left-bottom-templete">
+          <img src="images/left-bottom.png" alt="左下固定位置の飾り">
+        </div>
+        <div class="right-top-templete">
+          <img src="images/right-top.png" alt="右上固定位置の飾り">
+        </div>
+        <div class="right-bottom-templete">
+          <img src="images/right-bottom.png" alt="右下固定位置の飾り">
+        </div>
+      </div>
 
       <div class="content-top-img">
         <img src="images/content-top.png" alt="Artistの作品を出品支援する">
       </div>
 
-      <div class="content-top-text">
-        <p>KIRINJI は、麒麟児たる若手アーティストを応援したい！共に成長したい！<br>という想いから生まれた、NFTを作成・出品するチームです。</p>
-        <p>暗号資産を知らなくても、作品を海外の取引所に出品することができます。</p>
+      <div class="content-top-text-wrap">
+        <div class="content-top-text">
+          <p>KIRINJI は、麒麟児たる若手アーティストを応援したい！共に成長したい！<br>という想いから生まれた、NFTを作成・出品するチームです。</p>
+          <p>暗号資産を知らなくても、作品を海外の取引所に出品することができます。</p>
+        </div>
       </div>
 
       <div class="try-nft">
@@ -47,19 +53,21 @@
           <p>NFTという、アートの新しい可能性</p>
         </div>
         <div class="nft-possibilities-text-box">
-          <div class="nft-possibilities-text">
-            <p><strong>NFT</strong>は「<strong>Non-Fungible Token</strong>（非代替性トークン）」の頭文字です。<br>非代替性とは、その名の通り「替えが効かない、唯一無二の」という意味になります。</p>
-            <p>デジタルデータに、唯一無二性を与えたものがNFTです。<br>今、NFTは世界中で取引されています。</p>
-            <p><strong>私たちは、NFTと、その取引所を利用することで、日本の学生アーティストが、世界中に作品を届け、<br>ファンを作り、応援され、全く新しい収益源を作ることができると考えていました。</strong></p>
+          <div class="nft-possibilities-text-wrapp">
+            <div class="nft-possibilities-text">
+              <p><strong>NFT</strong>は「<strong>Non-Fungible Token</strong>（非代替性トークン）」の頭文字です。非代替性とは、その名の通り「替えが効かない、唯一無二の」という意味になります。</p>
+              <p>デジタルデータに、唯一無二性を与えたものがNFTです。今、NFTは世界中で取引されています。</p>
+              <p><strong>私たちは、NFTと、その取引所を利用することで、日本の学生アーティストが、世界中に作品を届け、ファンを作り、応援され、全く新しい収益源を作ることができると考えていました。</strong></p>
+            </div>
           </div>
           <div class="nft-possibilities-img">
             <div class="nft-possibilities-img-left">
               <img src="images/nft-possibilities.png" alt="OpenSeaのコレクションページ">
             </div>
             <div class="nft-possibilities-img-right">
-              <p>NFTはデジタルデータですので、<br>Web上の取引所で販売されます。</p>
-              <p>特にOpenSeaという海外の取引所にて、<br>盛んに取引されています。</p>
-              <p>2021年のNFT取引量は、2020年と比べて<br>42,988%もの大幅な増加（3億4,000万円→<br>1兆4,000億円）となっております。</p>
+              <p>NFTはデジタルデータですので、Web上の取引所で販売されます。</p>
+              <p>特にOpenSeaという海外の取引所にて、盛んに取引されています。</p>
+              <p>2021年のNFT取引量は、2020年と比べて42,988%もの大幅な増加（3億4,000万円→1兆4,000億円）となっております。</p>
             </div>
           </div>
         </div>
@@ -79,9 +87,15 @@
           <p>スキーム</p>
         </div>
         <div class="scheme-text-box">
-          <div class="scheme-text">
+          <div class="scheme-text pc">
             <p>①運営チーム KIRINJI　　 ：NFTのmint及びOpenseaへの出品、各種プロモーション</p>
             <p>②若手アーティストの方　：Artの制作・提供 </p>
+          </div>
+          <div class="scheme-text sp">
+            <p class="heading">①運営チーム KIRINJI</p>
+            <p class="text">NFTのmint及びOpenseaへの出品、各種プロモーション</p>
+            <p class="heading">②若手アーティストの方</p>
+            <p class="text">Artの制作・提供 </p>
           </div>
           <div class="scheme-img">
             <img src="images/scheme.png" alt="スキームを説明するフロー図">
@@ -115,35 +129,38 @@
             <img src="images/uekusa.png" alt="Uekusa Daichiの顔写真">
             <p class="name">Uekusa Daichi</p>
             <p class="position">Artist Management</p>
-            <p class="description">デジタルハリウッド大学を<br>卒業後、アクセンチュアを経て<br>Webセキュリティ企業副社長。<br>大学・Artistとの向き合い担当</p>
+            <p class="description">デジタルハリウッド大学を卒業後、アクセンチュアを経てWebセキュリティ企業副社長。大学・Artistとの向き合い担当</p>
           </div>
           <div class="profile">
             <img src="images/hayase.png" alt="Hayase Tomotakaの顔写真">
             <p class="name">Hayase Tomotaka</p>
             <p class="position">Planner</p>
-            <p class="description">複数のスタートアップで<br>M＆AやIPO準備を担当。<br>財務・法務・スキーム構築担当</p>
+            <p class="description">複数のスタートアップでM＆AやIPO準備を担当。財務・法務・スキーム構築担当</p>
           </div>
           <div class="profile">
             <img src="images/yamaguchi.png" alt="Yamaguchi Tadashiの顔写真">
             <p class="name">Yamaguchi Tadashi</p>
             <p class="position">engineer</p>
-            <p class="description">スタートアップの開発系役員。<br>ブロックチェーンに精通。<br>開発全般を担当</p>
+            <p class="description">スタートアップの開発系役員。ブロックチェーンに精通。開発全般を担当</p>
           </div>
           <div class="profile">
             <img src="images/inashima.png" alt="Inashima Nanamiの顔写真">
             <p class="name">Inashima Nanami</p>
             <p class="position">Account Planner</p>
-            <p class="description">アクセンチュアにて、<br>テクノロジーコンサルタント、ART×NFT Meta Fair #01運営。<br>KIRINJIではArtist開拓担当</p>
+            <p class="description">アクセンチュアにて、テクノロジーコンサルタント、ART×NFT Meta Fair #01運営。KIRINJIではArtist開拓担当</p>
           </div>
         </div>
         <div class="member-text">
-          <p>セキュリティスタートアップの経営者、財務や法律に精通したメンバー、<br>スタートアップの開発役員、アクセンチュアのテクノロジーコンサルタント等、<br>バランス感＆ビジネス経験豊かなメンバーがプロジェクトに参加しています。</p>
+          <p>セキュリティスタートアップの経営者、財務や法律に精通したメンバー、</p>
+          <p>スタートアップの開発役員、アクセンチュアのテクノロジーコンサルタント等、</p>
+          <p>バランス感＆ビジネス経験豊かなメンバーがプロジェクトに参加しています。</p>
         </div>
 
         <div class="soon">
         </div>
       </div>
 
+    </div>
     </div>
     <footer></footer>
   </body>
