--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             <p class="description">スタートアップの開発系役員。ブロックチェーンに精通。開発全般を担当</p>
           </div>
           <div class="profile">
-            <img src="images/inashima.png" alt="Inashima Nanamiの顔写真">
+            <img src="images/blank.png" alt="Inashima Nanamiの顔写真">
             <p class="name">Inashima Nanami</p>
             <p class="position">Account Planner</p>
-            <p class="description">アクセンチュアにて、テクノロジーコンサルタント、ART×NFT Meta Fair #01運営。KIRINJIではArtist開拓担当</p>
+            <p class="description">大手コンサルファームにて、テクノロジーコンサルタント、ART×NFT Meta Fair #01運営。KIRINJIではArtist開拓担当</p>
           </div>
         </div>
         <div class="member-text">
